js/js.translator/testData/incremental/invalidation/mainModuleInvalidation/main/m.1.kt
fun box(): String {
    if (qux() != 42) return "Fail qux"
    return "OK"
}
